@@ -1,0 +1,2 @@
+function the_product = rithmaticker_timeser(varargin)
+the_product = prod(cell2mat(varargin{:}));
